--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: petclinic-deployment
+  name: petclinic
   namespace: default
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: petclinic
@@ -14,7 +14,20 @@ spec:
         app: petclinic
     spec:
       containers:
-        - name: petclinic-container
-          image: 730335384723.dkr.ecr.ap-south-1.amazonaws.com/my-hf-model:latest
-          ports:
-            - containerPort: 8080
+      - name: petclinic
+        image: 730335384723.dkr.ecr.ap-south-1.amazonaws.com/my-hf-model:latest  # Replace with your ECR image
+        ports:
+        - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: petclinic-service
+spec:
+  selector:
+    app: petclinic
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+  type: LoadBalancer
